@@ -5,9 +5,9 @@ import com.ems.dtos.CandidateDTO;
 import com.ems.dtos.CandidatePageResponse;
 import com.ems.entities.Candidate;
 import com.ems.exceptions.CandidateAlreadyExistsException;
-
+import com.ems.entities.CandidateName;
 import com.ems.entities.Election;
-
+import com.ems.exceptions.CandidateAlreadyExistsException;
 import com.ems.exceptions.CandidateNotFoundException;
 import com.ems.exceptions.ElectionNotFoundException;
 import com.ems.exceptions.PartyNotFoundException;
@@ -20,12 +20,13 @@ import com.fasterxml.jackson.databind.ObjectMapper;
 import jakarta.transaction.Transactional;
 import jakarta.validation.Valid;
 import lombok.AllArgsConstructor;
-import lombok.NoArgsConstructor;
 import lombok.RequiredArgsConstructor;
 import org.springframework.beans.factory.annotation.Value;
+import lombok.extern.slf4j.Slf4j;
 import org.springframework.data.domain.Page;
 import org.springframework.data.domain.PageRequest;
 import org.springframework.data.domain.Pageable;
+import org.springframework.data.domain.Sort;
 import org.springframework.stereotype.Service;
 
 import java.io.IOException;
@@ -36,7 +37,10 @@ import java.util.List;
 import java.util.UUID;
 import org.springframework.data.domain.Sort;
 import org.springframework.web.multipart.MultipartFile;
+import java.util.Set;
+import java.util.stream.Collectors;
 
+@Slf4j
 @Service
 @RequiredArgsConstructor
 public class CandidateServiceImpl implements CandidateService {
@@ -52,14 +56,13 @@ public class CandidateServiceImpl implements CandidateService {
     public CandidateDTO findByCandidateSSN(String candidateSSN) {
         return candidateRepository.findByCandidateSSN(candidateSSN)
                 .map(candidateMapper::toCandidateDTO)
-                .orElseThrow(() -> new CandidateNotFoundException("No Candidate is found with the SSN: " + candidateSSN));
+                .orElseThrow(() -> new CandidateNotFoundException("No Candidate found with SSN: " + candidateSSN));
     }
 
     @Override
     @Transactional
     public Candidate saveCandidate(String candidateData, MultipartFile candidateImage, MultipartFile candidateSignature) throws IOException {
         CandidateDTO candidateDTO=objectMapper.readValue(candidateData, CandidateDTO.class);
-        System.out.println(candidateDTO.getElectionId()+"!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!");
         if (candidateRepository.findByCandidateSSN(candidateDTO.getCandidateSSN()).isPresent()) {
             throw new CandidateAlreadyExistsException("Candidate with SSN " + candidateDTO.getCandidateSSN() + " already exists.");
         }
@@ -98,12 +101,11 @@ public class CandidateServiceImpl implements CandidateService {
         return candidateRepository.save(candidate);
     }
 
-
     @Override
     public CandidateDTO findById(Long candidateId) {
-       return candidateRepository.findById(candidateId)
-               .map(candidateMapper::toCandidateDTO)
-               .orElseThrow(()->new CandidateNotFoundException("No Such candidate with id"+candidateId));
+        return candidateRepository.findById(candidateId)
+                .map(candidateMapper::toCandidateDTO)
+                .orElseThrow(() -> new CandidateNotFoundException("No Such candidate with id: " + candidateId));
     }
 
     @Override
@@ -130,22 +132,23 @@ public class CandidateServiceImpl implements CandidateService {
 
     @Override
     public List<CandidateByPartyDTO> findByPartyName(String candidatePartyName) {
-        List<Candidate> candidates=candidateRepository.findByParty_PartyName(candidatePartyName);
+        List<Candidate> candidates = candidateRepository.findByParty_PartyName(candidatePartyName);
 
-        if(candidates.isEmpty()){
-            throw new PartyNotFoundException("Party with given name not found");
+        if (candidates.isEmpty()) {
+            throw new PartyNotFoundException("Party with the given name not found.");
         }
+
         return candidates.stream()
                 .map(candidateMapper::toCandidateByPartyDTO)
-                .toList();
-
+                .collect(Collectors.toList());
     }
 
     @Override
     public List<CandidateDTO> findAll() {
         return candidateRepository.findAll()
-                .stream().map(candidateMapper::toCandidateDTO)
-                .toList();
+                .stream()
+                .map(candidateMapper::toCandidateDTO)
+                .collect(Collectors.toList());
     }
 
     @Override
@@ -153,6 +156,7 @@ public class CandidateServiceImpl implements CandidateService {
         candidateRepository.deleteById(candidateId);
     }
 
+    @Override
     public Page<CandidateDTO> getPagedCandidate(int page, int perPage, Sort sort) {
         Pageable pageable = PageRequest.of(page, perPage, sort);
         Page<Candidate> candidatePage = candidateRepository.findAll(pageable);
@@ -161,22 +165,16 @@ public class CandidateServiceImpl implements CandidateService {
 
     @Override
     public CandidatePageResponse getCandidateByElectionId(Long electionId, int page, int perPage) {
-        // Check if election exists
         Election election = electionRepository.findById(electionId)
                 .orElseThrow(() -> new ElectionNotFoundException("Election not found with ID: " + electionId));
-
         Pageable pageable = PageRequest.of(page, perPage);
-
-        // Fetch paged candidates
         Page<Candidate> candidatePage = candidateRepository.findByElection_electionId(electionId, pageable);
 
         if (candidatePage.isEmpty()) {
             throw new CandidateNotFoundException("No candidates found for Election ID: " + electionId);
         }
 
-        // Convert entities to DTOs
         Page<CandidateDTO> candidateDTOPage = candidatePage.map(candidateMapper::toCandidateDTO);
-
         return new CandidatePageResponse(
                 candidateDTOPage.getContent(),
                 candidateDTOPage.getNumber(),
@@ -190,9 +188,3 @@ public class CandidateServiceImpl implements CandidateService {
 
 
 }
-
-
-
-
-
-
